--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.15.0",
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
+    "jsonwebtoken": "^5.7.0",
     "moment": "^2.12.0",
     "mongoose": "^4.4.12"
   }
