--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine-node test/*.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +15,13 @@
     "express": "^4.13.4",
     "jsonwebtoken": "^5.7.0",
     "moment": "^2.12.0",
-    "mongoose": "^4.4.12"
+    "mongoose": "^4.4.7",
+    "mongoose-unique-validator": "^1.0.2"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "jasmine-node": "^1.14.5",
+    "mockgoose": "^6.0.2",
+    "supertest": "^1.2.0"
   }
 }
